--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.72</version>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.2.16</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>RegistFormTest</finalName>
